# etcmaint

./: .gitignore  .gitlab-ci.yml  README.rst  etc_almerger.py  etcmaint.py  etcmerger.py  pyproject.toml
doc/: command.rst  conf.py  conflict.rst  description.rst  design.rst  development.rst  index.rst  install.rst  vim.rst
etcmaint/: __init__.py  etcmaint.py
etcmaint/tests/: test_commands.py
