[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "etcmaint"
author = "Xavier de Gaye"
author-email = "xdegaye@gmail.com"
home-page = "https://gitlab.com/xdegaye/etcmaint"
classifiers = ["Programming Language :: Python :: 3.6", "License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"

[tool.flit.scripts]
etcmaint = "etcmaint.etcmaint:main"
